plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.salkcoding'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-aspectj'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

	// Local dev: embedded SMTP server for testing mail delivery without a real relay
	implementation 'com.icegreen:greenmail:2.1.3'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << '-parameters'
}

tasks.named('test') {
	useJUnitPlatform()
}

// ─────────────────────────────────────────────────────────────────────────────
// Tailwind CSS production build
//
// Replaces the cdn.tailwindcss.com runtime in templates/fragments/head.html
// with a precompiled, minified stylesheet served from /css/tailwind.css.
//
// Uses the Tailwind Standalone CLI (no Node.js required). Binary is downloaded
// to build/tools/ on first build, cached thereafter.
// ─────────────────────────────────────────────────────────────────────────────
ext {
	tailwindVersion = '3.4.17'
	tailwindToolDir = file("${buildDir}/tools/tailwindcss-${tailwindVersion}")
}

def tailwindBinaryName() {
	def os = System.getProperty('os.name').toLowerCase()
	def arch = System.getProperty('os.arch').toLowerCase()
	def aarch = (arch == 'aarch64' || arch == 'arm64')
	if (os.contains('win')) {
		return aarch ? 'tailwindcss-windows-arm64.exe' : 'tailwindcss-windows-x64.exe'
	} else if (os.contains('mac')) {
		return aarch ? 'tailwindcss-macos-arm64' : 'tailwindcss-macos-x64'
	} else {
		return aarch ? 'tailwindcss-linux-arm64' : 'tailwindcss-linux-x64'
	}
}

tasks.register('downloadTailwindCli') {
	description = 'Downloads the Tailwind CSS standalone CLI binary (cached).'
	group = 'frontend'
	def binName = tailwindBinaryName()
	def target = new File(tailwindToolDir, binName)
	outputs.file(target)
	doLast {
		if (!target.exists()) {
			tailwindToolDir.mkdirs()
			def url = "https://github.com/tailwindlabs/tailwindcss/releases/download/v${tailwindVersion}/${binName}"
			logger.lifecycle("[tailwind] downloading ${url}")
			new URL(url).withInputStream { i -> target.withOutputStream { o -> o << i } }
			if (!System.getProperty('os.name').toLowerCase().contains('win')) {
				target.setExecutable(true, false)
			}
			logger.lifecycle("[tailwind] saved to ${target}")
		}
	}
}

tasks.register('buildTailwindCss', Exec) {
	description = 'Compiles Tailwind CSS to src/main/resources/static/css/tailwind.css.'
	group = 'frontend'
	dependsOn 'downloadTailwindCli'

	def binFile  = new File(tailwindToolDir, tailwindBinaryName())
	def inputCss = file('tailwind/input.css')
	def configJs = file('tailwind/tailwind.config.js')
	def outCss   = file('src/main/resources/static/css/tailwind.css')

	inputs.file(inputCss)
	inputs.file(configJs)
	inputs.dir('src/main/resources/templates')
	inputs.dir('src/main/resources/static/js')
	outputs.file(outCss)

	doFirst {
		outCss.parentFile.mkdirs()
	}

	commandLine binFile.absolutePath,
		'-c', configJs.absolutePath,
		'-i', inputCss.absolutePath,
		'-o', outCss.absolutePath,
		'--minify'
}

processResources.dependsOn 'buildTailwindCss'
